# Signal-Protocol

./: .flake8  .gitignore  DEVELOPMENT_STATUS.md  Makefile  README.md  SETUP_COMPLETE.md  pyproject.toml  run_tests.py
docs/: DEVELOPMENT_GUIDELINES.md  MODULE_TEST_TEMPLATE.md  PACKAGE_DEVELOPMENT_SUMMARY.md  python_testing_debug_guide.md
scripts/: basic_check.py  check_code_quality.py
signal_protocol/: __init__.py
signal_protocol/keys/: __init__.py  base_key.py  identity_key.py  key_store.py
signal_protocol/keys/pre_keys/: __init__.py  base_pre_key.py  one_time_pre_key.py  pre_key_bundle.py  signed_pre_key.py
tests/: test_identity_key.py  test_message_encryption.py  test_pre_key.py  test_pre_key_reorganization.py
tests/signal_protocol/: __init__.py
tests/signal_protocol/keys/: __init__.py  test_key_store.py
tests/signal_protocol/keys/pre_keys/: __init__.py  test_base_pre_key.py  test_pre_key_bundle.py  test_signed_pre_key.py
